# garmin-personal-coach

./: .gitignore  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  pyproject.toml  requirements.txt
docs/: CALDAV_SETUP.md
docs/architecture/: web-ios-architecture.md
docs/parallel-execution/: architecture-integration-review.md  claude-code-parallel-plan.md  lane-1-runtime-strava-phase2.md  lane-2-research-nike-healthkit.md  lane-3-architecture-dashboard-api.md  lane-review-checklists.md  release-lane-1-runtime-nutrition.md  release-lane-2-docs-release-readiness.md  release-lane-3-qa-audit.md
docs/release/: current-product-state.md  final-pre-release-review.md  merge-order-plan.md  release-audit.md  release-checklist.md  release-readiness-checklist.md  user-journey.md
docs/research/: healthkit-feasibility.md  nike-run-club-feasibility.md
docs/specs/: dashboard-api-contract.md  dashboard-mvp.md
garmin_coach/: _version.py  activity_fetch.py  ai_coach.py  ai_simple.py  calendar_sync.py  cli.py  coach_engine.py  dispatch.py  evening_checkin.py  final_check.py  garmin_writeback.py  i18n.py  logging_config.py  models.py  morning_checkin.py  periodization.py  plan.py  profile_manager.py  rate_limit.py  scheduler.py  setup_wizard.py  telegram_bot.py  training_load.py  training_load_manager.py  training_log.py  triggers.py  update_check.py  weekly_review.py  workout_review.py
garmin_coach/adapters/: __init__.py  fetch.py  garmin.py  nike.py  strava.py
mcp/: __init__.py  __main__.py  server.py
mcp_server/: __init__.py  __main__.py  entrypoint.py  server.py
telegram/: bot.py
tests/: test_adapter_support_wave.py  test_adapters_and_logs.py  test_adapters_scheduler_calendar_profile.py  test_cli_dispatch_nutrition.py  test_coach.py  test_dispatch_cli_ai_simple_wizard_adapters.py  test_easy_gap_closures.py  test_final_hundred_wave.py  test_garmin_sync.py  test_handler_mcp_oauth_full.py  test_integration_runtime.py  test_last_mile_wave.py  test_more_cleanup_wave.py  test_new_modules.py  test_nutrition_coaching.py  test_remaining_branch_wave.py  test_runtime_support.py  test_setup_daily_wizard.py  test_small_branch_modules.py  test_strava_sync.py  test_targeted_cleanup_wave.py  test_telegram_runtime.py  test_training_load_full.py  test_wizard_init_last_lines.py
(+16 files in other folders)
